remove `Xmx` configuration in Travis/Maven build